--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~9.0.2",
     "@ng-bootstrap/ng-bootstrap": "^6.0.0",
     "@types/jquery": "^3.3.33",
+    "bootstrap": "^4.4.1",
+    "ngx-bootstrap": "^5.3.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
